<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    >


<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"

    >

    <TextView
        style="@style/titleStyle"
        android:text="@string/headerText"
    />

    <Button
        android:id="@+id/spotify"
        style="@style/menuButtonStyle"
        android:text="@string/spotifyStreamer"
         />

    <Button
        android:id="@+id/scoresapp"
        style="@style/menuButtonStyle"
        android:text="@string/scroesapp"
        />
    <Button
        android:id="@+id/libraryapp"
        style="@style/menuButtonStyle"
        android:text="@string/libraryApp"
        />

    <Button
        android:id="@+id/builditbigger"
        style="@style/menuButtonStyle"
        android:text="@string/builditbigger"
        />
    <Button
        android:id="@+id/xyzreader"
        style="@style/menuButtonStyle"
        android:text="@string/xyzreader"
        />
    <Button
        android:id="@+id/capstone"
        style="@style/menuButtonStyle.red"
        android:text="@string/capsstone"
        />

</LinearLayout>
</ScrollView>